tests/samples/negative/pattern_matching/match_expression_non_enum.ax
module match_expression_non_enum;

fn main() -> i32 {
    return match "text" {
        _ => 0,
    };
}
